# depbotsample

.github/: dependabot.yml
project1/: pyproject.toml
project1/project1/: __init__.py  _version.py
project2/: pyproject.toml
