[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "project1"
dynamic = ["version"]
description = "A sample project using hatch-vcs for versioning"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "rich>=13.0.0",
]

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../", fallback_version="10.0.0" }

[tool.hatch.build.hooks.vcs]
version-file = "project1/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["project1"]
