[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "project2"
module-root = ""

[project]
name = "project2"
version = "0.1.0"
description = "A sample project using uv with path dependency"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "project1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "flask>=3.0.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
]

[tool.uv.sources]
project1 = { path = "../project1", editable = true }
