[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "project2"
module-root = ""

[project]
name = "project2"
version = "0.1.0"
description = "A sample project using uv with path dependency"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "project1",
    "numpy==1.24.4",  # Deliberately old version
    "pandas==2.0.3",  # Deliberately old version
    "flask==3.0.3",   # Deliberately old version
    "sqlalchemy>=2.0.0",
    "httpx==0.28.1",  # Deliberately old version
    "typer>=0.9.0",
    "jinja2>=3.1.0",
]

[tool.uv.sources]
project1 = { path = "../project1", editable = true }
